# syscalls

./: Cargo.toml  README.md
examples/: syscall.rs  table.rs  write.rs
src/: baremetal.rs  empty.rs  lib.rs  novusk_uefi.rs  syscall.rs  table.rs
