[package]
name = "novusk_syscalls"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"
description = "A library that lets you use Novusk system calls"
readme = "README.md"
repository = "https://github.com/new-kernel/syscalls/"

[dependencies]
register = { version = "1.x.x", optional = true }
uefi = "0.8.1"

[features]
baremetal_aarch64 = ["register"]
novusk_uefi = ["register"]
