[package]
name = "novusk_syscalls"
version = "0.1.0"
authors = ["Nathan McMillan <nathanmcmillan54@gmail.com>"]
edition = "2018"
description = "A library that lets you use Novusk system calls"
readme = "README.md"
repository = "https://github.com/new-kernel/syscalls/"
license = "MIT"

[dependencies]
